--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,21 @@
 # Testing
+# This is a basic workflow to help you get started with Actions
+
+name: EC2 on-demand
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - id: checkWorkdSpace 
+        name: WP
+        run: pwd
+        shell: bash 
+
+ # Add new files in folder, commit along with other modified files, push
