--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,21 +2,30 @@
 # This is a basic workflow to help you get started with Actions
 
 name: EC2 on-demand
+# Controls when the workflow will run
 on:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  schedule:
+    #- cron: '0 */24 * * *'
+    - cron: '0 0 1 1 *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  start-runner:
-    name: Start self-hosted EC2 runner
-    # This workflow contains a single job called "build"
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - id: checkWorkdSpace 
+      - id: WP
         name: WP
-        run: pwd
+        run: |
+          pwd
+          ls
         shell: bash 
 
  # Add new files in folder, commit along with other modified files, push
+
