--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,11 @@ name: EC2 on-demand
 # Controls when the workflow will run
 on:
   # Allows you to run this workflow manually from the Actions tab
-  respository_dispatch:
-    type: ["spawn"]
+  repository_dispatch:
+    types: [on-demand-ec2-test]
 
   workflow_dispatch:
-  
+
   schedule:
     #- cron: '0 */24 * * *'
     - cron: '0 0 1 1 *'
