--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,24 @@ on:
     types: [on-demand-ec2-test]
 
   workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -30,6 +48,8 @@ jobs:
         run: |
           pwd
           ls
+          echo "Level: $LEVEL"
+          echo "Tags: $TAGS"
           echo "Environment: $ENVIRONMENT"
         shell: bash 
 
