--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,9 @@ on:
         required: false
         type: boolean
       environment:
-        description: 'Environment to run tests against'
+        description: 'Environment to run tests'
         type: environment
-        required: true
-
+        required: false
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
