--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,28 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+        #uses: aws-actions/configure-aws-credentials@v1
+        #with:
+        #  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #  aws-region: ${{ secrets.AWS_REGION }}
+      - name: Start EC2 runner
+        id: start-ec2-runner
+        uses: ubc-tuehoang/ec2-github-runner@v1
+        #with:
+        #  mode: start
+        #  github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+        #  ec2-image-id: ami-0cc7c6ceea4d616ff
+        #  ec2-instance-type: t2.micro
+        #  subnet-id: subnet-00d1cc7b
+        #  security-group-id: tue-security-group
+        #  iam-role-name: my-role-name # optional, requires additional permissions
+        #  aws-resource-tags: > # optional, requires additional permissions
+        #    [
+        #      {"Key": "Name", "Value": "ec2-github-runner"},
+        #      {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
+        #    ]
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - id: WP
         name: WP
