--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,14 +34,14 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Configure AWS credentials
+      #- name: Configure AWS credentials
         #uses: aws-actions/configure-aws-credentials@v1
         #with:
         #  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         #  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         #  aws-region: ${{ secrets.AWS_REGION }}
-      - name: Start EC2 runner
-        id: start-ec2-runner
+      #- name: Start EC2 runner
+        #id: start-ec2-runner
         #uses: ubc-tuehoang/ec2-github-runner@v1
         #with:
         #  mode: start
