--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 # Testing
 # This is a basic workflow to help you get started with Actions
 
-name: EC2 on-demand
+name: EC2-on-demand
 # Controls when the workflow will run
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -39,14 +39,14 @@ jobs:
         #with:
         #  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         #  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        #  aws-region: ${{ secrets.AWS_REGION }}
+        #  aws-region: central
       #- name: Start EC2 runner
         #id: start-ec2-runner
         #uses: ubc-tuehoang/ec2-github-runner@v1
         #with:
         #  mode: start
         #  github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-        #  ec2-image-id: ami-0cc7c6ceea4d616ff
+        #  ec2-image-id: ami-0cc7eea4d616ff
         #  ec2-instance-type: t2.micro
         #  subnet-id: subnet-00d1cc7b
         #  security-group-id: tue-security-group
@@ -56,6 +56,34 @@ jobs:
         #      {"Key": "Name", "Value": "ec2-github-runner"},
         #      {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
         #    ]
+        #EC2-on-demand:
+        #  name: Launch EC2-on-demand
+        #  needs: start-runner # required to start the main job when the runner is ready
+        #  runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
+        #  steps:
+        #    - name: Whatever
+        #      run: echo 'Whatever EC2'
+        #stop-runner:
+        #  name: Stop self-hosted EC2 runner
+        #  needs:
+        #    - start-runner # required to get output from the start-runner job
+        #    - EC2-on-demand # required to wait when the main job is done
+        #  runs-on: ubuntu-latest
+        #  if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
+        #  steps:
+        #    - name: Configure AWS credentials
+        #      uses: aws-actions/configure-aws-credentials@v1
+        #      with:
+        #        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #        aws-region: central
+        #    - name: Stop EC2 runner
+        #      uses: ubc-tuehoang/ec2-github-runner@v1
+        #      with:
+        #        mode: stop
+        #        github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+        #        label: ${{ needs.start-runner.outputs.label }}
+        #        ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - id: WP
